# wordStudy

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  word_study.db-shm  word_study.db-wal
docs/: architecture.md
models/: neo4j_client.py  schemas.py  sqlite_client.py
prompts/: extract_words.txt  merge_meaning.txt
routers/: word_router.py
scripts/: run_local.py
services/: cache_service.py  datamuse_service.py  embedding_service.py  llm_service.py  log_service.py
src/word_study/: __init__.py  config.py  deps.py  main.py
src/word_study/core/: schemas.py
src/word_study/prompts/: read_only_cypher.txt
src/word_study/routers/: word_router.py
src/word_study/services/: cache_service.py  datamuse_service.py  embedding_service.py  llm_service.py  log_service.py  meaning_pipeline.py  neo4j_client.py  spaced_repetition.py  sqlite_client.py
src/word_study/static/: style.css
src/word_study/templates/: browse.html  index.html
src/word_study/utils/: logging_utils.py  meaning_tools.py  relation_tools.py  word_tools.py
static/: style.css
templates/: index.html
tests/: conftest.py
tests/integration/: test_services.py
tests/unit/: test_config.py  test_core.py  test_deps.py  test_pipeline.py  test_sm2.py
tools/: meaning_tools.py  relation_tools.py  word_tools.py
