[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordstudy"
version = "1.0.0"
description = "英语单词学习系统 — Neo4j + LangChain + FastAPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "WordStudy Team" }]
keywords = ["english", "vocabulary", "neo4j", "langchain", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-neo4j>=0.3.0",
    "neo4j>=5.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
wordstudy = "main:main"

[project.urls]
Homepage = "https://github.com/example/wordstudy"
Repository = "https://github.com/example/wordstudy"

[tool.hatch.build.targets.wheel]
packages = [
    "models",
    "tools",
    "services",
    "routers",
]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "wordstudy/prompts"
"templates" = "wordstudy/templates"
"static" = "wordstudy/static"

[tool.uv]
# uv 是现代 Python 包管理器的首选，兼容 pip
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
