[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordstudy"
version = "1.0.0"
description = "英语单词学习系统 — Neo4j + LangChain + FastAPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "WordStudy Team" }]
keywords = ["english", "vocabulary", "neo4j", "langchain", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-neo4j>=0.3.0",
    "neo4j>=5.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
wordstudy = "word_study.main:main"

[project.urls]
Homepage = "https://github.com/1985899182/wordStudy"
Repository = "https://github.com/1985899182/wordStudy"

[tool.hatch.build.targets.wheel]
packages = ["src/word_study"]


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.fastapi]
entrypoint = "word_study.main:app"